fix line break of command line buttons on small screen, fixes #245

--- a/web/static/css/default.css
+++ b/web/static/css/default.css
@@ -97,6 +97,10 @@ body {
   z-index: 1039;
 }
 
+#commandLineContainer .btn-group {
+    white-space: normal;
+}
+
 #commandLineContainer form {
   margin: 0;
 }
